Fri Feb 10 14:56:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile:
	* configure.in: 
	* init_ets.c (krb5_init_ets): Remove isode cruft.

Thu Feb  2 20:49:10 1995  Mark Eichin  (eichin@cygnus.com)

	* krb5_err.et (KRB5KRB_AP_ERR_V4_REPLY): new error code for V4
	reply to a V5 request.

Mon Dec 19 17:10:13 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KV5M_CONTEXT, KV5M_OS_CONTEXT): Add new error codes.

Fri Nov 18 15:29:55 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KV5M_KEYTAB_ENTRY): Add new error code

Fri Nov 18 00:23:51 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (clean): remove $(BOGUS)
	(HDRS): use ASN1_HDRS, not ASN1_SRCS. (from epeisach)

Thu Nov 17 00:41:39 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KRB5_CC_WRITE_ERR): Add new error code.

Fri Nov 11 07:10:25 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: fix some typos for kv5m_err.et

Thu Nov 10 22:12:43 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kv5m_err.et: Add support for krb5_address table; rename
		KV5M_AUTH_DATA to follow the convention properly.

Thu Nov  3 16:39:49 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in:
	* Makefile.in:
	* kv5m_err.et: Add the kv5m error table.

Fri Oct 14 23:07:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* init_ets.c (krb5_init_ets): Fix typo in spelling of KRB5_USE_ISODE.

Thu Sep 29 15:09:03 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KRB5_KDCREP_SKEW, KRB5_IN_TKT_REALM_MISMATCH,
	  KRB5_SERVICE_UNKNOWN):
	  	Added two new error codes.

Wed Sep 21 18:00:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KRB5KRB_AP_ERR_ILL_CR_TKT): Added new error code.

Sat Jul 16 05:59:53 1994  Tom Yu  (tlyu at dragons-lair)

	* krb5_err.et: missing space between comma and doublequote

Tue Jun 28 19:11:43 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: doing the right thing with new error tables

	* configure.in: adding ISODE_DEFS
	* init_ets.c: folding in Harry's changes
